@@ -43,9 +43,15 @@ void systray_dialog_apply_settings()
 
 static CairoDockDialog *systray_new_dialog()
 {
+  GtkRequisition req;
+
   systray.tray = tray_init(myDock->pWidget);
   systray.dialog = applet_build_dialog (myDock, systray.tray->widget, NULL);
   //gtk_widget_set_size_request(systray.dialog->pWidget, 24, 24);
+  gtk_widget_size_request(GTK_WIDGET(systray.tray->box), &req);
+  printf("Req: %s, %s\n", req.width, req.height);
+  //gtk_widget_set_size_request(GTK_WINDOW(systray.dialog->pWidget), req.width, req.height);
+
   systray_dialog_apply_settings();
   return systray.dialog;
 }
